# research

./: .gitignore  .gitmodules  neurips_2026.tex
hypernetwork/: main.tex
mdn-lmc/: Makefile  k1.tex  mdn_mean_field_gauge.tex  natural_parameter_lmc_k1.tex  natural_parameter_mean_field.tex
mdn-lmc/experiments/: .gitignore  README.md  k1_experiment.py  main.py  pattern_sweep_rate_report.py  pyproject.toml  width_sweep_experiment.py
mdn-lmc/experiments/configs/: config.yaml
tabm/: levelb_truncation_removal_assessment.md  tabm_meanfield_initial_step.fdb_latexmk  tabm_meanfield_initial_step.fls  tabm_meanfield_initial_step.tex  tabm_meanfield_levelc_smalltime_body.tex  tabm_meanfield_levelc_surrogates.fls  (+2 more)
tabpfn/codes/: README.md  core_closed_form.py  core_imbalance.py  pyproject.toml  requirements.txt  run_closed_form.py  run_imbalance_oracle.py  run_learned_tfm.py  test_closed_form.py
tabpfn/codes/learned/: run.sh
tabpfn/codes/learned/scripts/: evaluate_all.py  generate_prior_data.py  run_evaluation.py  train_base.py  train_specialists.py
tabpfn/codes/learned/src/: data_loader.py  evidence.py  merging.py  utils.py
tabpfn/codes/oracle/: core_closed_form.py  run_closed_form.py
tabpfn/codes/results/.mplconfig/: fontlist-v390.json
tabpfn/codes/results/closed_form/: experiment1_global_hedge.csv  experiment2_boundary_failure_delta.csv  experiment2_boundary_failure_profile.csv  experiment3_boundary_fix_delta.csv  experiment3_boundary_fix_profile.csv  experiment4_phase_transition_delta.csv  experiment4_phase_transition_tail_summary.csv  summary_closed_form.csv
(+37 files in other folders)
