[project]
name = "tabpfn-codes"
version = "0.0.1"
description = "TabPFN experiment workspace"
requires-python = "==3.12.*"
dependencies = [
    # Core
    "torch==2.9",
    "numpy>=2.0.2",
    "h5py>=3",
    "requests>=2",
    "scikit-learn>=1.5",
    "scipy",
    "pandas",
    "tqdm",
    # Plotting
    "matplotlib",
    "seaborn",
    # Training / optimisation
    "schedulefree>=1.4",
    # TabPFN ecosystem
    "pfns==0.3.0",
    "openml==0.15.1",
    "tabicl[pretrain]",
    "ticl @ git+https://github.com/microsoft/ticl.git@main",
    "tabpfn-v1-prior @ git+https://github.com/automl/tabpfn-v1-prior.git",
    # Other
    "interpret",
    "numba",
    "mlflow",
    # Local editable package
    "tfmplayground",
]

[tool.uv.sources]
tfmplayground = { path = "learned/TFM-Playground", editable = true }
